--- a/PUBLIC/css/comm.css
+++ b/PUBLIC/css/comm.css
@@ -77,4 +77,7 @@
     background-size: 40px 70px
 }
 /*页面内容区域的宽度,所有内容总宽度一致*/
-.my-width{width:1200px;}
+.my-width{
+    width:1200px;
+    margin: 0 auto;
+}
