--- a/PUBLIC/css/ami_place.css
+++ b/PUBLIC/css/ami_place.css
@@ -1,3 +1,81 @@
-.my-width{background-image: url(img/01.jpg);
-          height: 640px;
+.container-fluid{
+    padding: 0; 
 }
+.banner{
+     background-image: url(../img/ami_place/01.jpg);
+     width: 100%;height: 640px;
+}
+.banner h1{text-align: center;}
+.banner .search{
+     width:760px;
+     height: 60px;
+     margin: 0 auto;
+     position: relative;
+    }
+     
+.banner h1{
+    color: #fff;
+    font-size: 56px;
+    margin-top: 162px;
+    font-weight: 700;
+    text-shadow: 0 5px 5px rgba(0,0,0,.1);
+    }     
+.banner .search input{
+     width: 620px;
+     height: 60px;
+     box-sizing: border-box;
+     padding: 20px;
+     position: absolute;
+     border-top-left-radius: 5px;
+     border-bottom-left-radius: 5px;
+     outline: none;
+    }
+.banner .search .search-right{
+    position: absolute;
+    width: 140px;
+    height: 60px;
+    left: 620px;
+    text-align: center;
+    line-height: 60px;
+}    
+.banner .search a{
+    color: #fff;
+    font-size: 18px;
+    text-decoration: none;
+    padding: 17px 52px;
+    background-color: #28b76c;
+    background-image: url(../img/ami_place/0114c0187e1f5b9fe65524777eaac15.png);
+    background-position: 0px 0px;
+    background-repeat: no-repeat;
+    }
+    /*热门城市推荐*/
+.box .title{
+     text-align: center;
+     font-size: 24px;
+     margin-bottom: 35px;
+     }
+.box{
+     width:980px;
+     margin: 70px auto 0;
+    }
+.box .box-tab ul{
+      list-style: none;
+      display: flex;
+      font-size: 18px;
+      justify-content: center;
+      color: #929292;
+      
+    }    
+.box .box-tab ul li{
+      padding-right:50px;
+      border-bottom: 1px solid #e5e5e5;
+      padding-bottom: 5px;
+    }    
+.box .box-tab ul li .in{
+      color: #000;
+      border-bottom: 2px solid #28b76c;
+      padding-bottom: 5px; 
+    }    
+.box .box-tab ul li:last-child{
+      padding-right:0;
+    }    
