--- a/PUBLIC/css/ami_place.css
+++ b/PUBLIC/css/ami_place.css
@@ -93,13 +93,7 @@ ul{
     width: 306px;
     font-weight: initial;
     box-sizing: content-box;
-}
-.box .box-tab .center:after{
-    display: block;
-    content: '.';
-    clear: both;
-    line-height: 0;
-    visibility: hidden;
+    margin-bottom: 50px;
 }
  
 .box .box-tab .item dt{
@@ -124,6 +118,7 @@ ul{
 }
 .box .btn-container{
     text-align: center;
+    margin-bottom: 68px;
 } 
 .box .btn-container a{
     text-decoration: none;
@@ -141,4 +136,63 @@ ul{
     margin:0;padding:0;
     transition:margin-left 1s;
     margin-bottom:40px;
+}
+.box .box-tab li:after{
+    display: block;
+    content: '.';
+    clear: both;
+    line-height: 0;
+    visibility: hidden;
+}
+.box .box-tab .fade{
+    display:none;
+}
+.box .box-tab .in{
+    display: block;
+    opacity: 1;
+}
+   /*主题目的地*/
+.card1{
+    width:100%;
+    height: 400px;
+}
+
+.card1 ul li~li{
+    width: 236px;
+    height: 194px;
+    margin:0 0 12px 12px;
+    float: left;
+}
+.card1 ul li:first-child{
+    width:236px;
+    height: 400px;
+    float: left;
+}
+.card1 ul .d1{
+    background: url("../img/ami_place/02.jpg") no-repeat;
+    background-size: cover;
+}
+.card1 ul .d2{
+    background: url("../img/ami_place/03.png") no-repeat;
+    background-size: cover;
+}
+.card1 ul .d3{
+    background: url("../img/ami_place/04.jpg") no-repeat;
+    background-size: cover;
+}
+.card1 ul .d4{
+    background: url("../img/ami_place/05.png") no-repeat;
+    background-size: cover;
+}
+.card1 ul .d5{
+    background: url("../img/ami_place/06.jpg") no-repeat;
+    background-size: cover;
+}
+.card1 ul .d6{
+    background: url("../img/ami_place/07.png") no-repeat;
+    background-size: cover;
+}
+.card1 ul .d7{
+    background: url("../img/ami_place/08.jpg") no-repeat;
+    background-size: cover;
 }
