--- a/PUBLIC/css/ami_place.css
+++ b/PUBLIC/css/ami_place.css
@@ -58,7 +58,7 @@ ul{
      font-size: 24px;
      margin-bottom: 35px;
      }
-.box,.box1,.box2{
+.box,.box1,.box2,.box3{
      width:980px;
      margin: 70px auto 0;
      position:relative;
@@ -266,7 +266,46 @@ ul{
       background: #28b76c;
       color: #fff;
   }
-
+ /*  国家列表*/
+.end ul li{
+    width: 33.3%;
+    float: left;
+}
+.end ul:after{
+    display: block;
+    content: '.';
+    clear: both;
+}
+.end ul li{
+    height: 30px;
+}
+.end ul li a {
+    color:#000;
+    font-size: 14px;
+    margin-right:3px;
+}
+.end ul li a em {
+   opacity: 0.7;
+}
+.mititle{
+    font-size:12px;
+    color:#959595;
+    padding-bottom: 15px;
+}
+.end ul li .hot a::after{
+    padding: 1px 3px 0;
+    background: #ff8323;
+    content: '热门';
+    font-size: 12px;
+    color: #fff;
+}
+.end ul li a{
+   text-decoration: none;
+}
+.end ul li .item a:hover{
+   color:lightgreen;
+}
+.box3{margin-bottom: }
 
 
 
