--- a/PUBLIC/css/special_hotel.css
+++ b/PUBLIC/css/special_hotel.css
@@ -15,8 +15,12 @@
    text-shadow: 0 6px 20px rgba(109, 84, 255, .3);
    font-weight: 500;
 }
-.sh-search,.center{
+.sh-search{
     width: 980px;
+    margin: 0 auto;
+}
+.center{
+    width: 1160px;
     margin: 0 auto;
 }
 .sh-search .sh-search-top{
@@ -38,6 +42,7 @@
     color: #aaa;
 }
 .center{margin-top:30px;}
+.sort{margin-bottom: 15px;}
 .sort label{
   margin-right:30px;  
     
@@ -66,10 +71,111 @@
 }
 .box .card1{
     width: 275px;height: 316px;
-    margin: 0 10px;
+    margin-right: 20px;
+    margin-bottom: 40px;
+    float: left;
+}
+.box .card1:nth-child(4n){
+    margin-right: 0;
+
+
 }
 .box .card1 img{
     width: 100%;
     height: 185px;
+}
+.card1 a{
+    text-decoration: none;
+    color: #000;
+}
+.card1 h3{
+    font-size: 18px;
+    margin-top: 15px;
+}
+.card1 h4{
+    font-size: 16px;
+    color: rgba(0, 0n,0, .7);
+}
+.card1 a p .sp1{
+    font-size: 22px;
+    font-weight: bold;
+}
+
+.card1 a p span:nth-child(2n){
+    font-size: 18px;
+    font-weight: 500;
+}
+.card1 p{position: relative;}
+.card1 a p span:last-child{
+    margin-left: 20px; 
+}
+.card1 a p span:nth-child(2n)::before{
+    display: block;
+    width: 30px;
+    height: 4px;
+    content: "";
+    position: absolute;
+    background-color: rgba(112,77,255,.6);
+    background: linear-gradient(270deg,rgba(112,77,255,.6),rgba(83,144,250,.6));
+    border-radius: 2px;
+    bottom: 5px;
+    left: 0;
+}
+.card1 a p span:nth-child(2n)::after{
+    content: "";
+    display: block;
+    width: 1px;
+    height: 14px;
+    background-color: rgba(0,0,0,.5);
+    position: absolute;
+    right: 179px;
+    bottom: 8px;
+}
+.card1 a .p1{
+    font-size: 14px;
+    color: rgba(0, 0,0, .4);
+    margin:0;
+    height: 14px;
+    line-height: 14px;
+}
+.card1 a .p1 img{
+    width: 12px;
+    height: 14px;
+    margin-bottom: 3px;
+}
+.card1 div{
+    position: relative;
+}
+.card1 a div .sp2{
+    position: absolute;
+    right: 0;
+    bottom: 32px;
+    color: rgba(0,0,0,.4);
+    font-size: 14px;
+    text-decoration: line-through;
+}
+.card1 a div .sp3{
+    position: absolute;
+    right: 0;
+    bottom: 2px;
+    color: #ff3e6a;
+    font-size: 30px;
+     height: 31px;
+   overflow: hidden;
+   font-weight: bold;
+}
+.card1 a div .sp3 span{
+    color: #ff3e6a;
+    font-size: 12px;
+     height: 31px;
+   overflow: hidden;
+   font-weight: bold;
+}
+.card1 a div .sp3 em{
+    color: rgba(0, 0,0, .4);
+    font-size: 12px;
+     height: 31px;
+   overflow: hidden;
+   font-style: normal;
 }
 
