--- a/PUBLIC/css/index1.css
+++ b/PUBLIC/css/index1.css
@@ -4,87 +4,7 @@ a,a:hover{text-decoration: none;}
 .mrg-rt-15{margin-right:15px;}
 ul{list-style: none;}
 button:hover{box-shadow: 0 0 2px 2px #ddd;}
-.top-wheel{
-  position:relative;
-  width:100%; height:635px;
-  background:url(../img/index/banner2.jpg);
-}
-/*导航栏左边部分*/
-.top-nav{
-  display: flex;
-  background:linear-gradient(90deg,rgba(0,0,0,.2) 10%,transparent);
-  justify-content: space-between;
-  margin:0 30px;
-  z-index: 1;
-}
-.navbars{width:30%;}
-.navbars>.navbar-navs{
-  display: flex;
-  justify-content: space-around;
-  list-style: none;
-  font: bolder 16px "arial black";
-}
-.navbars>.navbar-navs a{
-  display: inline-block;
-  height:60px;
-  color:#fff;
-  line-height: 60px; 
-}
-.navbars>.navbar-navs a:first-child img{vertical-align: middle;}
-/*导航栏右边图标部分*/
-.top-nav>.nav-user{
-  width:27%;height:60px;
-  display: flex;
-  align-items: center;
-}
-.nav-user>.sch{
-  height:30px;width:50%;
-  padding-top:5px;
-}
-.sch>button,.nav-user>.sch>input{border:0; outline:none;}
-.sch>input{border-radius: 3px;}
-.sch>button{
-  width:20px;
-  background: #fff ;
-}
-.nav-user>.imgs>a{
-  display:inline-block;
-  height:20px;
-  background:#fff;
-  font:13px bold;
-  color:#fff;
-  vertical-align: middle;
-  margin-right:10px;
-}
-.nav-user>.img>a:first-child{width:1px;}
-.imgs>a~a{width:20px;}
-.imgs>a:nth-child(6),.imgs>a:nth-child(7){width:30px;}
-/*左右的 > < 按钮*/
-.wheel-left-btn,.wheel-right-btn{
-  width:90px; height:60%;
-  position:relative;
-}
-.wheel-left-btn>a,.wheel-right-btn>a{
-  position: absolute;
-  top:50%;
-  font:45px bolder;
-  color:#fff !important;
-}
-.wheel-left-btn>a{left:50%;}
-.wheel-left-btn{
-  float:left;
-  background:linear-gradient(90deg,rgba(0,0,0,.2) 10%,transparent);
-}
-.wheel-right-btn{
-  float:right;
-  background:linear-gradient(90deg,transparent,rgba(0,0,0,.2) 10%);
-}
-/*选项卡导航部分*/
-.top-card{
-  width:30% !important;
-  margin:0 auto;
-}
-/*————————————   app下载   .appload-img   ————————————*/
+/*——————————   app下载   .appload-img   ————————————*/
 .appload-img{background: #f5f5f5;}
 .appload-img>div{
   display: flex;
