--- a/PUBLIC/css/ami_place.css
+++ b/PUBLIC/css/ami_place.css
@@ -58,10 +58,11 @@ ul{
      font-size: 24px;
      margin-bottom: 35px;
      }
-.box,.box1{
+.box,.box1,.box2,.box3{
      width:980px;
      margin: 70px auto 0;
      position:relative;
+     margin-bottom: 50px;
     }
 
 .box-tab ul{
@@ -134,7 +135,7 @@ ul{
     border-top:2px solid #28b76c;
     display: block;
     margin:0;padding:0;
-    transition:margin-left 1s;
+    transition:margin-left .5s;
     margin-bottom:40px;
 }
 .box-tab li:after{
@@ -193,9 +194,123 @@ ul{
 .card1 img:first-child{
     height:100%;
 }
+
 .card1 ul li:not(:first-child) img{
     width:100%;
 }
+/*月度推荐*/
+.card2{
+    width:100%;
+    height: 300px;
+
+}
+.card2 li{
+    position: relative;
+    overflow: hidden;
+}
+.card2 img,.card2 div{
+    position: absolute;
+}
+.card2 div{
+    height: 100%;
+    padding: 22px 15px;
+    color: #fff;
+    transition: all 1s;
+    margin-top:130%;
+}
+.card2 h3{
+    font-size: 16px;
+    padding-bottom: 15px;
+    border-bottom: 1px solid #fff;
+}
+.card2 span{
+    font-size: 12px;
+}
+.card2 ul li~li{
+    width: 189px;
+    height: 300px;
+    margin-left:8px;
+    float: left;
+}
+.card2 ul li:first-child{
+    width:191px;
+    height: 300px;
+    float: left;
+}
+.card2 img{
+    width:100%;
+}
+.box-tab .tab1{
+    display: flex;
+    font-size: 18px;
+    justify-content: center;
+    color: #929292;
+  margin-bottom: 30px;
+  }    
+.box-tab .tab1 li{
+    cursor: pointer;
+    width: 50px;
+   height: 50px;
+   border-radius: 50%;
+   text-align: center;
+   line-height: 50px;
+  } 
+.box-tab .tab1 li:not(:last-child){
+    margin-right: 25px;  
+}
+/*.box-tab .tab1 li span{
+   width: 50px;
+   height: 50px;
+   display: inline-block;
+   border-radius: 50%;
+   text-align: center;
+   line-height: 50px;
+  }*/
+  .box-tab .tab1 .in{
+      background: #28b76c;
+      color: #fff;
+  }
+ /*  国家列表*/
+.end ul li{
+    width: 33.3%;
+    float: left;
+}
+.end ul:after{
+    display: block;
+    content: '.';
+    clear: both;
+}
+.end ul li{
+    height: 30px;
+}
+.end ul li a {
+    color:#000;
+    font-size: 14px;
+    margin-right:3px;
+}
+.end ul li a em {
+   opacity: 0.7;
+}
+.mititle{
+    font-size:12px;
+    color:#959595;
+    padding-bottom: 15px;
+}
+.end ul li .hot a::after{
+    padding: 1px 3px 0;
+    background: #ff8323;
+    content: '热门';
+    font-size: 12px;
+    color: #fff;
+}
+.end ul li a{
+   text-decoration: none;
+}
+.end ul li .item a:hover{
+   color:lightgreen;
+}
+
+
 
 
 
