--- a/PUBLIC/css/ami_place.css
+++ b/PUBLIC/css/ami_place.css
@@ -33,6 +33,7 @@ ul{
      border-top-left-radius: 5px;
      border-bottom-left-radius: 5px;
      outline: none;
+     border: 1px solid #fff
     }
 .banner .search .search-right{
     position: absolute;
@@ -47,13 +48,16 @@ ul{
     color: #fff;
     font-size: 18px;
     text-decoration: none;
-    padding: 17px 52px;
-    
-    background-image: url(../img/ami_place/0114c0187e1f5b9fe65524777eaac15.png);
-    background-position: 0px 0px;
-    background-repeat: no-repeat;
-    line-height: 60px;
     }
+    .banner .search span{
+        height: 25px;
+        width: 25px;
+
+        display: inline-block;
+        vertical-align: middle;
+        background:url(../img/ami_place/search.png) no-repeat;
+         background-size: 20px 20px;
+        }  
     .search-ico{
         width: 5px;
         height: 5px;
